style.css
html, body{
	margin: 0;
	padding: 0;
}

body{
	background: #000;
	overflow: hidden;
}

#logo{
	color: #fff;
	font-family: 'Trebuchet MS';
	font-size: 72pt;
	font-weight: bolder;
	left: 0;
	position: absolute;
	text-align: center;
	top: 43%;
	width: 100%;
	z-index: 2;
}

#logo span {
	color: white;
	-webkit-text-stroke: 0;
	text-shadow: 0 1px 0 #999, 0 2px 0 #999, 0 3px 0 #999, 0 4px 0 #999, 0 5px 0 #999, /* 0 1px 0 #CCC, 0 2px 0 #C9C9C9, 0 3px 0 #BBB, 0 4px 0 #B9B9B9, 0 5px 0 #AAA, */ 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
}

#logo span:first-child {
	color: #59DEFD;
	-webkit-text-stroke: 0;
	text-shadow: 0 1px 0 #3C95AB, 0 2px 0 #3C95AB, 0 3px 0 #3C95AB, 0 4px 0 #3C95AB, 0 5px 0 #3C95AB, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
}

#logo span:last-child {
	color: #80FF62;
	-webkit-text-stroke: 0;
	text-shadow: 0 1px 0 #55B045, 0 2px 0 #55B045, 0 3px 0 #55B045, 0 4px 0 #55B045, 0 5px 0 #55B045, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
}

/*	
	Rays, inspired by:
	http://davidwalsh.name/javascript-spin
*/

#rays	{ 
	background: url('rays.png') center center no-repeat;
	background-size: 2000px 2000px;
	position:absolute; 
	top:-500px; 
	left:-100px;
	width: 2000px; 
	height: 2000px; 
	-webkit-transform:scale(1) rotate(16.768rad);
	-moz-transform:scale(1) rotate(16.768rad);
	-o-transform:scale(1) rotate(16.768rad);
	transform:scale(1) rotate(16.768rad);
	
	z-index: 1;
}

